--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -101,7 +101,7 @@ and seek for ways to ensure data quality by validating RDF data according to pre
 in particular, as many communities are used to have this functionality in the XML world.
 %XML Schema is the standard language to formulate constraints to validate XML documents.
 %For RDF, however, there are several constraint languages - but not a stand-alone standard one meeting the majority of RDF validation use cases. 
-To formulate constraints and to validate RDF data, several languages exist or are currently developed,
+To validate RDF data and to formulate constraints, several languages exist or are currently developed,
 but there is no clear favorite and none of the languages is able to meet all requirements raised by data practitioners
 % Truth be told, we do may two things, blabla on and to blabla, however for the flow of the text we dont need to overkill the text. In abstract and introduction, we just give general idea so at such points we better focus on flow.  
 Based on our work in the \emph{DCMI RDF Application Profiles Task Group} and in cooperation with the \emph{W3C Data Shapes Working Group}, 
@@ -131,33 +131,37 @@ RDF validation; RDF constraints; RDF validation requirements; Linked Data; Seman
 %This ambiguity in semantics is one of the main reasons why OWL 2 has not been adopted as a standard constraint language for RDF validation.  
 %For this reason, we cannot use OWL 2 ontologies for RDF validation as we use XML Schemas, DTDs, RELAX NG, or Schematron to validate XML documents.
 
-In 2013, the W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
-where experts from industry, government, and academia discussed first use cases for RDF constraint
-%\footnote{For simplicity reasons, we use the terms \emph{constraint types/constraints} instead of \emph{RDF constraint types/RDF constraints} in the remainder of the paper} 
-formulation and RDF data validation.
-In 2014, two working groups on RDF validation have been established to focus on RDF validation: 
-the W3C RDF Data Shapes working group\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles task group\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
-Bosch and Eckert \cite{BoschEckert2014} collected the findings of these working groups and initiated a database of RDF validation requirements\footnote{Online available at \url{http://purl.org/net/rdf-validation}}
-which is available for contribution.
-The intention is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation in a comprehensive and structured way. 
-We identified 81 requirements to formulate constraints; each of them corresponding to a constraint type which can be expressed by at least one existing constraint language \cite{BoschNolleAcarEckert2015}. 
-
 Recently, RDF validation as a research field gained speed due to common needs of data practitioners. A typical example is the library domain that co-developed and adopted Linked Data principles very early. For libraries, the common description of resources are key business and they have a long tradition in developing and using interoperable data formats. While they embrace the openness of Linked Data and the data modeling principles provided by RDF, the data is still mostly represented in XML and this is unlikely to change any time soon. 
-Among the reasons for the success of XML is the possibility to formulate fine-grained constraints to be met by the data and to validate the data according to these constraints using powerful systems like DTDs, XML Schemas, RELAX NG, or Schematron.
+Among the reasons for the success of XML is the possibility to formulate fine-grained constraints to be met by the data and to validate the data according to these constraints using powerful systems like \emph{DTD}, \emph{XML Schema}, \emph{RELAX NG}, or \emph{Schematron}.
 A typical example is the definition of a library record describing a book. There are clear rules which information has to be available to describe a book properly (required fields, like a title), but also how information like an ISBN number is properly represented. Libraries seek to make their own data reusable for general purposes, but also to enrich and interlink their own data. Checking if third-party data meets own requirements or validating existing data according to new needs for a Linked Data application are among common use cases for RDF validation.
+
+In 2013, the \emph{W3C} organized the \emph{RDF Validation Workshop}\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
+where experts from industry, government, and academia discussed first use cases for RDF data validation and constraint formulation.
+In 2014, two working groups on RDF validation have been established: 
+the \emph{W3C RDF Data Shapes Working Group}\footnote{\url{http://www.w3.org/2014/rds/charter}} and the \emph{DCMI RDF Application Profiles Task Group}\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
+We collected the findings of these working groups and initiated a database of RDF validation requirements\footnote{Online available at \url{http://purl.org/net/rdf-validation}} \cite{BoschEckert2014}.
+The intention is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation in a comprehensive and structured way. 
+Based on our work in the \emph{DCMI} and in cooperation with the \emph{W3C} working group,
+we published by today 81 requirements to validate RDF data and to formulate constraints; 
+%each of them corresponding to a constraint type which in most cases can be expressed by multiple constraint languages. 
+each of them corresponds to a constraint type from which concrete constraints are instantiated to be checked on RDF data and
+which in most cases can be expressed by multiple constraint languages.
+Requirements/constraint types are uniquely identified by alphanumeric technical identifiers.
+\emph{Minimum qualified cardinality restrictions} (\emph{R-75}), e.g., is a constraint type which corresponds to the requirement {\small\emph{R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES}}.
+We recently published a technical report (serving as appendix of this paper) in which we explain each constraint type in detail and give examples for each represented by different constraint languages \cite{BoschNolleAcarEckert2015}.
+More than 10 constraint languages with different syntax and semantics exist or are currently developed. 
+We focus on the five most promising ones on being the standard like
+\emph{Shape Expressions (ShEx)}, \emph{Resource Shapes (ReSh)}, and \emph{Description Set Profiles (DSP)}. 
+The \emph{Web Ontology Language} \emph{(OWL)} in its current version \emph{OWL 2} can also be used as a constraint language.
+With its direct support of validation via \emph{SPARQL}, the \emph{SPARQL Inferencing Notation (SPIN)} is very popular and certainly plays an important role for the future development in this field. 
+%\emph{SPIN} is particularly interesting as a means to validate arbitrary constraint languages by mapping them to \emph{SPARQL} \cite{BoschEckert2014-2}.
 
 \subsection{Motivation and Overview}
 
-As there is no do-it-all language meeting the majority of requirements to formulate constraints and to validate RDF data,
+We evaluated for the five most common constraint languages which constraint types they enable to express \cite{BoschNolleAcarEckert2015}.
+As there exists no single best solution and none of the languages is able to meet all requirements raised by data practitioners,
 %which can be used to express constraints and to validate RDF data, 
 %(e.g. existential and universal quantification, cardinality restrictions, and exclusive or of properties)
-language selection heavily depends on the individual use case.  
-There are more than 10 candidate languages with different syntaxes and semantics, and we will focus on five which, in our opinion, are the most promising languages on being the standard constraint languages. Those are
-\emph{Description Set Profiles (DSP)},
-\emph{Resource Shapes (ReSh)}, 
-\emph{Shape Expressions (ShEx)},
-the \emph{SPARQL Inferencing Notation (SPIN)}, 
-and the \emph{Web Ontology Language (OWL 2)}.
 %\section{Ideas}
 %constraint design patterns:
 % - ontology design pattern.org
@@ -166,38 +170,30 @@ and the \emph{Web Ontology Language (OWL 2)}.
 % - constraint / constraint elements / constraint design patterns / constraint language
 %dependency between requirements / when this requirements is fulfilled then this is also fulfilled (e.g. min card and requ. car)
 %min car more powerful than req. propery
-The idea behind this paper is to achieve complete RDF validation requirements coverage by representing any constraint type (each of them corresponding to a requirement to formulate constraints on and to validate RDF data) in a generic way using a lightweight vocabulary which consists of only a few terms (see Section \ref{sec:vocabulary}).
-
-\emph{Cardinality restrictions} can be expressed either generically (\emph{generic constraints}) by \emph{description logics (DL)} 
-%and extensions  
-or specifically (\emph{specific constraints}) by domain-specific constraint languages such as \emph{OWL 2}, \emph{DSP}, \emph{ShEx}, \emph{ReSh}, and \emph{SPIN}.
-The knowledge representation formalism {\em DL}, with its  well-studied theoretical properties, provides the foundational basis to express constraints in a generic way. 
-For that reason, we map constraint types to \emph{DL} statements.
-
-Requirements/constraint types are uniquely identified by alphanumeric technical identifiers.
-\emph{Minimum qualified cardinality restrictions} (\emph{R-75}), e.g., is a constraint type which corresponds to the requirement {\small\emph{R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES}}. 
-With \emph{minimum qualified cardinality restrictions}, researchers from the library domain may restrict
+the idea behind this paper is to satisfy all RDF validation requirements
+by representing constraints of any constraint type in a generic way using a lightweight vocabulary which consists of only a few terms (Section \ref{sec:vocabulary}).
+The constraint type \emph{minimum qualified cardinality restrictions} (\emph{R-75}) can be instantiated to ensure
 that \emph{publications} must have at least one \emph{author} which must be a \emph{person}.
-This constraint can be represented generically (\emph{generic constraint}) in \emph{DL} {\small\ms{(Publication $\sqsubseteq$ $\geq$1 author.Person)}}, but also specifically (\emph{specific constraint}) by multiple constraint languages:
+This constraint can either be represented generically by \emph{description logics (DL)} {\small\ms{(Publication $\sqsubseteq$ $\geq$1 author.Person)}} or specifically by multiple domain-specific constraint languages:
 
-\begin{ex}
-# OWL 2:
+\begin{ex}[commandchars=\\\{\}]
+\textit{OWL 2:}
 Publication
     a owl:Restriction ;
     owl:minQualifiedCardinality 1 ;
     owl:onProperty author ;
     owl:onClass Person .
 		
-# ShEx:
-Publication { author @Person{1, } }
+\textit{ShEx:}
+Publication \{ author @Person\{1, \} \}
 
-# ReSh:
+\textit{ReSh:}
 Publication a rs:ResourceShape ; rs:property [
     rs:name "author" ; rs:propertyDefinition author ;
     rs:valueShape Person ;
     rs:occurs rs:One-or-many ; ] .
 		
-# DSP:
+\textit{DSP:}
 [   a dsp:DescriptionTemplate ; 
     dsp:resourceClass Publication ; 
     dsp:statementTemplate [ a dsp:NonLiteralStatementTemplate ;
@@ -206,6 +202,9 @@ Publication a rs:ResourceShape ; rs:property [
         dsp:nonLiteralConstraint [ a dsp:NonLiteralConstraint ;
             dsp:valueClass Person ] ] ] .
 \end{ex}
+
+The knowledge representation formalism {\em DL}, with its  well-studied theoretical properties, provides the foundational basis to express constraints in a generic way. 
+For this reason, the appendix of this paper contains mappings to \emph{DL} to determine which \emph{DL} constructs are needed to express each constraint type \cite{BoschNolleAcarEckert2015}.
 
 As every \emph{publication} must have at least one \emph{author} which must be a \emph{person}, 
 and since the book \emph{The-Lord-Of-The-Rings} is a \emph{publication} {\small\ms{(rdf:type(The-Lord-Of-The-Rings, Publication)),}} 
@@ -1161,9 +1160,7 @@ in order to automatically validate RDF data complying with each type of \emph{ge
 \section{Evaluation}
 \label{sec:evaluation}
 
-We evaluated to which extend the five most promising constraint languages on being the standard for fulfilling each of the overall 81 requirements to formulate RDF constraints (each corresponds to a constraint type).
-We recently published a technical report (serving as appendix of this paper) in which we explain each constraint type in detail and give examples for each (represented by different constraint languages).
-The technical report also contains mappings to \emph{DL} to logically underpin each constraint type and to determine which \emph{DL} constructs are needed to express each constraint type \cite{BoschNolleAcarEckert2015}.
+The appendix of this paper contains mappings to \emph{DL} to logically underpin each constraint type and to determine which \emph{DL} constructs are needed to express each constraint type \cite{BoschNolleAcarEckert2015}.
 If a constraint type was expressible in \emph{DL}, we added the mapping to \emph{DL} and to the \emph{generic constraint} conforming to the \emph{RDF-CV}.
 In contrast, if a constraint type was not expressible in \emph{DL}, we only added the mapping to the \emph{generic constraint}.
 This way, we show that each constraint type can be mapped to a \emph{generic constraint} and therefore be represented generically by means of the \emph{RDF-CV}.
@@ -1325,21 +1322,6 @@ It is part of future work
 	%\item to offer bidirectional transformations between specific constraints (expressed by multiple constraint languages) and generic constraints. 
 	%\item to provide translations between specific constraints (expressed by any specific constraint language) by using generic constraints as an intermediate transformation step.
 %\end{itemize}
-
-\section{Old}
-
-\begin{ex}[commandchars=\\\{\}]
-:ArtficialIntelligence
-	a swrc:Book , \textit{:ToValidate} ;
-	dcterms:subject :ComputerScience .
-:ComputerScience
-	skos:Concept , \textit{:ToValidate} ;
-	dcam:memberOf :BookSubjects ;
-	skos:inScheme :BookSubjects ;
-	rdf:value "Computer Science"@en .
-:BookSubjects
-	a skos:ConceptScheme , \textit{:ToValidate} .
-\end{ex}
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{apacite}
