RDF Constraints Vocabulary

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -133,6 +133,17 @@
   Timestamp                = {2014.11.09}
 }
 
+@Article{BoschEckert2015-2,
+  Title                    = {A Vocabulary to Describe RDF Constraints Generically},
+  Author                   = {Bosch, Thomas and Eckert, Kai},
+  Year                     = {2015},
+
+  Eprintclass              = {cs.LO},
+  Eprinttype               = {arxiv},
+  Owner                    = {Thomas Bosch},
+  Timestamp                = {2014.05.25}
+}
+
 @Article{BoschEckert2014,
   Title                    = {Requirements on RDF Constraint Formulation and Validation},
   Author                   = {Bosch, Thomas and Eckert, Kai},
