--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -11,7 +11,7 @@
 \usepackage[a4paper, left=2.9cm,right=2.87cm,bottom=3cm,top=3cm,headsep=1.27cm]{geometry}
 \setlength{\parskip}{0.5em}
 \renewcommand{\tablename}{TABLE} 
-\renewcommand{\figurename}{FIG} 
+\renewcommand{\figurename}{FIG.} 
 \usepackage{titlesec}
 \titlespacing\section{0pt}{12pt plus 2pt minus 2pt}{6pt plus 1pt minus 1pt}
 \titlespacing\subsection{0pt}{12pt plus 2pt minus 2pt}{3pt plus 1pt minus 1pt}
@@ -23,7 +23,7 @@
 \clearscrheadfoot
 \pagestyle{scrheadings}
 \renewcommand*{\titlepagestyle}{scrheadings}
-\chead{\fontsize{11pt}{0pt}\selectfont Proc. Int'l Conf. on Dublin Core and Metadata Applications 2015}
+\chead{\fontsize{9pt}{0pt}\selectfont Proc. Int'l Conf. on Dublin Core and Metadata Applications 2015}
 \usepackage{apacite}
 
 
@@ -207,7 +207,8 @@ There exists no single best solution considered as high-level intuitive constrai
 %dependency between requirements / when this requirements is fulfilled then this is also fulfilled (e.g. min card and requ. car)
 %min car more powerful than req. propery
 Thus, the idea behind this paper is to satisfy all RDF validation requirements
-by representing constraints of any constraint type in a generic way using a lightweight vocabulary which consists of only a few terms (Section \ref{sec:vocabulary}).
+by representing constraints of any constraint type in a generic way using a lightweight vocabulary which consists of only a few terms.
+We lately published a technical report (serving as second appendix of this paper) in which we describe the vocabulary in detail \cite{BoschEckert2015-2} (Section \ref{sec:vocabulary}).
 The constraint type \emph{minimum qualified cardinality restrictions} (\emph{R-75}) can be instantiated to ensure
 that \emph{publications} must have at least one \emph{author} which must be a \emph{person}.
 This constraint can either be represented generically by \emph{description logics (DL)} {\small\ms{(Publication $\sqsubseteq$ $\geq$1 author.Person)}} or specifically by multiple domain-specific constraint languages:
@@ -503,8 +504,8 @@ which is universal enough to describe constraints of any constraint type.
 We call this vocabulary the \emph{RDF Constraints Vocabulary (RDF-CV)}\footnote{Online available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}} whose conceptual model is shown in Figure \ref{fig:RDF-CV-conceptual-model}.
 \begin{figure}
 	\centering
-		\includegraphics[width=0.80\textwidth]{images/RDF-CV-conceptual-model.png}
-	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} - conceptual model}
+		\includegraphics[width=0.60\textwidth]{images/RDF-CV-conceptual-model.png}
+	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} - Conceptual Model}
 	\label{fig:RDF-CV-conceptual-model}
 \end{figure}
 
@@ -549,69 +550,62 @@ on properties and classes (\emph{property and class constraints}, 1/10).
 As \emph{context classes} of \emph{simple constraints} are reused within \emph{complex constraints},
 it does not make sense to have terms standing for \emph{simple} and \emph{complex constraints} within the \emph{RDF-CV}. 
 As a consequence, the distinction of \emph{property} and \emph{class constraints} is sufficient to generically describe constraints of all constraint types.
-\tb{use RDF-CV / not: expressible in RDF-CV / RDF-CV is a vocabulary, not a language}
+%\tb{use RDF-CV / not: expressible in RDF-CV / RDF-CV is a vocabulary, not a language}
 Altogether, instances of the most of the constraint types are \emph{simple constraints on properties} which are \emph{expressible in DL}. 
 %Thus, the majority of constraint types are directly and relatively easy formulated in form of \emph{simple constraints} which can be mapped to equivalent \emph{DL} constructs.
 
 \subsection{\emph{Simple Constraints}}
 
-\subsubsection{\emph{Simple Constraints} (Expressible in \emph{DL})}
-
-Sub-classes of \emph{simple constraints} are \emph{property constraints} and \emph{class constraints} (see the \emph{RDF-CV} implementation model in figure \ref{fig:RDF-CV-implementation-model}). 
-For both \emph{property} and \emph{class constraints} a \emph{context class}, a list of \emph{classes}, the \emph{constraining element}, and the \emph{constraining value} can be stated. 
-Lists of \emph{left} and \emph{right properties} can only be specified for \emph{property constraints}.
-
+The implementation model of the \emph{RDF-CV} (see Figure \ref{fig:RDF-CV-implementation-model}) shows that
+both \emph{property constraints} and \emph{class constraints} are \emph{simple constraints}. 
+%For both \emph{property} and \emph{class constraints} a \emph{context class}, a list of \emph{classes}, the \emph{constraining element}, and the \emph{constraining value} can be stated. 
+%Lists of \emph{left} and \emph{right properties} can only be specified for \emph{property constraints}.
 \begin{figure}
 	\centering
-		\includegraphics[width=0.70\textwidth]{images/RDF-CV-implementation-model.png}
-	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} - implementation model}
+		\includegraphics[width=0.60\textwidth]{images/RDF-CV-implementation-model.png}
+	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} - Implementation Model}
 	\label{fig:RDF-CV-implementation-model}
 \end{figure}
-
-A \emph{simple constraint} holds for all individuals of a \emph{context class}.
-Consider, e.g., the following \emph{minimum qualified cardinality restriction} on the object property \emph{author}, which restricts \emph{publications} to have at least one \emph{author} which is a \emph{person}: 
-\begin{DL}
-$Publication \sqsubseteq \geq1 author . Person $
-\end{DL}
-The cardinality restriction is a constraint on the property \emph{author} and is therefore classified as a \emph{property constraint} which holds for all individuals of the class \emph{Publication} (see Table \ref{tab:property-constraint-cardinality-restriction} for the mapping to \emph{RDF-CV}):
-
+A \emph{simple constraint} holds for all individuals of their \emph{context class}.
+The \emph{minimum qualified cardinality restriction} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person,}}
+which restricts \emph{publications} to have at least one \emph{author} which must be a \emph{person},
+is an example of a \emph{property constraint} on \emph{author}
+which holds for all individuals of the class \emph{Publication}.
+Table \ref{tab:property-constraint-cardinality-restriction} displays the mapping to the \emph{RDF-CV}:
 \begin{table}[H]
   \scriptsize
   \sffamily
   \vspace{0cm}
-	\caption{Property Constraint - Cardinality Restriction}
+	\caption{Property Constraint - Minimum Qualified Cardinality Restriction}
 	\label{tab:property-constraint-cardinality-restriction}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
       property & Publication & author & - & Person & $\geq$ & 1 \\
 		\end{tabular}
 \end{table}
 
-The \emph{constraining element} indicates the actual type of constraint like \emph{DL} concept and role constructors, (in)equality, and further keywords for constraint types which cannot be expressed in \emph{DL} (e.g. regular expressions and constraining facets).
-In some cases, a constraint is only complete when in addition to the \emph{constraining element} a \emph{constraining value} is stated.
-The cardinality restriction 
-{\small\ms{$\geq$1 author.Person}}, e.g., 
-constructs an anonymous class of all individuals having at least one \emph{author} relationship to \emph{persons}.
-The \emph{constraining element} of this \emph{property constraint} is the \emph{DL} at-least restriction \emph{$\geq$} and the \emph{constraining value} is \emph{1}.
-\emph{Simple constraints} may refer to a list of \emph{classes}.
-The qualified cardinality restriction above, e.g., refers to the class \emph{Person}, 
-i.e. restricts the objects of the property \emph{author} to be of the class \emph{Person}.
-
+The \emph{constraining element} indicates the actual type of constraint like \emph{DL} concept and role constructors, (in)equality, and further keywords for constraint types which cannot be expressed in \emph{DL} (e.g., regular expressions and constraining facets).
+In some cases, a constraint is only complete when a \emph{constraining value} is stated in addition to the \emph{constraining element}.
+\emph{Simple constraints} may also refer to a list of \emph{classes}.
+The \emph{constraining element} of the \emph{property constraint} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person},} e.g.,  is the \emph{DL at-least restriction} \emph{$\geq$}, the \emph{constraining value} is \emph{1}, and
+the list of \emph{classes} includes \emph{Person} which restricts the objects of the property \emph{author} to be of the class \emph{Person}.
 For \emph{property constraints}, \emph{left} and \emph{right property lists} are specified.
-The assignment of properties to these lists happens relative to the \emph{constraining element} - which may be an operator (e.g., $\sqsubseteq$ in case of \emph{object property paths}).
-\emph{Object Property Paths} (\emph{R-55}; also called \emph{complex role inclusion axioms} in \emph{DL})
-express that, if an individual \emph{x} is connected by a sequence of object properties with an individual \emph{y}, 
+The assignment of properties to these lists happens relative to the \emph{constraining element} 
+which may be an operator like $\sqsubseteq$.
+\emph{Object Property Paths} (\emph{R-55})
+ensure that if an individual \emph{x} is connected by a sequence of object properties with an individual \emph{y}, 
 then \emph{x} is also related to \emph{y} by a particular object property. 
-As \emph{Stephen-Hawking} is the \emph{author} of the book \emph{A-Brief-History-Of-Time} {\small\ms{(authorOf(Stephen-Hawking, A-Brief-History-Of-Time))}} whose \emph{genre} is \emph{Popular-Science} {\small\ms{(genre(A-Brief-History-Of-Time, Popular-Science)),}}
-the following \emph{object property path} infers that \emph{Stephen-Hawking} is an \emph{author} of the \emph{genre} \emph{Popular-Science} {\small\ms{(authorOfGenre(Stephen-Hawking, Popular-Science)):}}
-\begin{DL}
-authorOf $\circ$ genre $\sqsubseteq$ authorOfGenre 
-\end{DL}
-Thus, when mapped to the \emph{RDF-CV} (see Table \ref{tab:property-constraint-object-property-paths}), the properties \emph{authorOf} and \emph{genre} are on the left side of the \emph{constraining element} \emph{$\sqsubseteq$},
-and the property \emph{authorOfGenre} is on the right side:
-
+As \emph{Stephen-Hawking} is the \emph{author} of the book \emph{A-Brief-History-Of-Time} 
+%{\small\ms{(authorOf(Stephen-Hawking, A-Brief-History-Of-Time))}} 
+whose \emph{genre} is \emph{Popular-Science}, 
+%{\small\ms{(genre(A-Brief-History-Of-Time, Popular-Science)),}}
+the \emph{object property path} {\small\ms{authorOf $\circ$ genre $\sqsubseteq$ authorOfGenre}} infers that \emph{Stephen-Hawking} is an \emph{author} of the \emph{genre} \emph{Popular-Science}. 
+%{\small\ms{(authorOfGenre(Stephen-Hawking, Popular-Science))}.}
+Thus, when mapped to the \emph{RDF-CV} (Table \ref{tab:property-constraint-object-property-paths}), the properties \emph{authorOf} and \emph{genre} are on the left side of the \emph{constraining element} \emph{$\sqsubseteq$}
+and the property \emph{authorOfGenre} is on the right side.
+As this \emph{property constraint} holds all individuals, the \emph{context class} is the \emph{DL top concept} $\top$ which stands for the super-class of all classes.
 \begin{table}[H]
   \scriptsize
   \sffamily
@@ -620,35 +614,25 @@ and the property \emph{authorOfGenre} is on the right side:
 	\label{tab:property-constraint-object-property-paths}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
       property & $\top$ & authorOf, genre & authorOfGenre & $\top$ & $\sqsubseteq$ & - \\
 		\end{tabular}
 \end{table}
 
-\subsubsection{\emph{Simple Constraints} (Not Expressible in \emph{DL})}
-
-There are \emph{simple constraints} which cannot be expressed in \emph{DL} such as \emph{literal pattern matching}, \emph{literal value comparison}, \emph{literal ranges}, \emph{default values}, and \emph{language tag cardinality} \cite{BoschNolleAcarEckert2015}.
-% maybe additional constraint default values:
-% ear shape of races, e.g. vulcans / teeth color
-% mathematical operations
-
-{\em Literal pattern matching} (\emph{R-44}) restricts literals to match given patterns.
-The following \emph{universal restriction}, e.g., ensures that \emph{books} can only have valid \emph{ISBN} identifiers, 
-i.e., strings that match a given regular expression:
-\begin{DL}
-\ms{Book $\sqsubseteq$ $\forall$ identifier.ISBN} 
-\end{DL}
-Even though, the restriction of the datatype \emph{ISBN} cannot be expressed in \emph{DL}, \emph{OWL 2 DL} can be used to express the \emph{literal pattern matching} constraint:
-
-\begin{ex}
-ISBN a RDFS:Datatype ; owl:equivalentClass [ a RDFS:Datatype ;
-    owl:onDatatype xsd:string ; 
-    owl:withRestrictions ([ xsd:pattern "^\d{9}[\d|X]" ])] .
-\end{ex} 
-The first OWL 2 axiom explicitly declares {\em ISBN} to be a datatype. %\er{Why start from second and then first? Also better we say "owl axiom" when we talk axiom of owl, to prevent ambiguity.}\tb{resolved}
-The second OWL 2 axiom defines {\em ISBN} as an abbreviation for a datatype restriction on {\em xsd:string}. 
-The datatype {\em ISBN} can be used just like any other datatype like in the \emph{universal restriction} above.
+There are \emph{simple constraints} which are not expressible in \emph{DL} but can still be described using the \emph{RDF-CV} 
+such as constraints of the type \emph{literal pattern matching} (\emph{R-44}) which restrict literals to match given patterns.
+The \emph{universal restriction} {\small\ms{Book $\sqsubseteq$ $\forall$ identifier.ISBN}} ensures that \emph{books} can only have valid \emph{ISBN} identifiers, 
+i.e., strings that match a given regular expression.
+%Even though, the restriction of the datatype \emph{ISBN} cannot be expressed in \emph{DL}, \emph{OWL 2 DL} can be used to express the \emph{literal pattern matching} constraint:
+%\begin{ex}
+%ISBN a RDFS:Datatype ; owl:equivalentClass [ a RDFS:Datatype ;
+    %owl:onDatatype xsd:string ; 
+    %owl:withRestrictions ([ xsd:pattern "^\d{9}[\d|X]" ])] .
+%\end{ex} 
+%The first OWL 2 axiom explicitly declares {\em ISBN} to be a datatype. %\er{Why start from second and then first? Also better we say "owl axiom" when we talk axiom of owl, to prevent ambiguity.}\tb{resolved}
+%The second OWL 2 axiom defines {\em ISBN} as an abbreviation for a datatype restriction on {\em xsd:string}. 
+%The datatype {\em ISBN} can be used just like any other datatype like in the \emph{universal restriction} above.
 %There are multiple use cases associated with the requirement to match literals according to given patterns (\emph{Literal Pattern Matching}\footnote{Corresponds to \emph{R-44-PATTERN-MATCHING-ON-RDF-LITERALS}}).
 %The enterprise vessel, e.g.,  can only have the registry numbers "NCC-1701", "NCC-1701-A", "NCC-1701-B", "NCC-1701-C", "NCC-1701-D", or "NCC-1701-E".
 %The universal restriction can be represented in DL:
@@ -664,16 +648,21 @@ The datatype {\em ISBN} can be used just like any other datatype like in the \em
 %The second axiom defines \ms{RegistryNumber} as an abbreviation for a datatype restriction on \ms{xsd:string}. 
 %The first axiom explicitly declares \ms{RegistryNumber} to be a datatype. 
 %The datatype \ms{RegistryNumber} can be used just like any other datatype like in the universal restriction above.
-The \emph{literal pattern matching} constraint validates \emph{ISBN} literals according to the regular expression causing constraint violations for triples which do not not match. 
+%The \emph{literal pattern matching} constraint validates \emph{ISBN} literals according to the regular expression causing constraint violations for triples which do not not match. 
 %\ms{Janeway commandsEnterprise Voyager} and \ms{Voyager registryNumber "NCC-74656"\textasciicircum{}\textasciicircum{}RegistryNumber}, 
 %but not for the triples \ms{Picard commandsEnterprise Enterprise} and \ms{Enterprise registryNumber "NCC-1701-E"\textasciicircum{}\textasciicircum{}RegistryNumber}.
-In Table \ref{tab:simple-constraint-not-expressible-in-dl)}, the \emph{simple constraint} (\emph{literal pattern matching}) and the \emph{complex constraint} (\emph{universal restriction}) are mapped to the \emph{RDF-CV}:
-
+Table \ref{tab:simple-constraint-not-expressible-in-dl)} presents 
+how the \emph{literal pattern matching} \emph{simple constraint} which is not expressible in \emph{DL} and 
+how the \emph{universal restriction} \emph{complex constraint} which is expressible in \emph{DL} are mapped to the \emph{RDF-CV}.
+Thereby, the \emph{context class} \emph{ISBN}, whose instances must satisfy the \emph{simple constraint}, 
+is reused within the list of \emph{classes} the \emph{complex constraint} refers to.
+The \emph{literal pattern matching} constraint type introduces the new \emph{constraining element} \emph{regex}.
+The validation of each \emph{constraining element}, so for \emph{regex}, has to be implemented only once.
+%In general, validation has to be implemented once for each \emph{generic constraint type} which is not expressible in \emph{DL}. 
 %\begin{gcotable}
 %property & Enterprise & registryNumber & - & RegistryNumber & $\forall$ & - \\
 %class & RegistryNumber & - & - & xsd:string & regex & 'NCC-1701([-][A-E])?' \\
 %\end{gcotable}
-
 \begin{table}[H]
   \scriptsize
   \sffamily
@@ -682,15 +671,12 @@ In Table \ref{tab:simple-constraint-not-expressible-in-dl)}, the \emph{simple co
 	\label{tab:simple-constraint-not-expressible-in-dl)}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
-      property & Book & identifier & - & ISBN & $\forall$ & - \\
       class & ISBN & - & - & xsd:string & regex & '\string^\text{$\backslash$d$\{9\}$[$\backslash$d$\mid$X]}\$' \\
+      property & Book & identifier & - & ISBN & $\forall$ & - \\
 		\end{tabular}
 \end{table} %\tb{Erman, can you please format the regular expression in the table above correctly?}
-The \emph{literal pattern matching} constraint type introduces the new \emph{constraining element} \emph{regex},
-for which a validation mechanism has to be implemented.
-Validation has to be implemented once for each \emph{generic constraint type} which is not expressible in \emph{DL}.
 
 \subsection{\emph{Complex Constraints}}
 
@@ -779,7 +765,7 @@ D $\sqsubseteq$ $\geq$ 1 title.string $\sqcap$ $\leq$ 1 title.string \\
 	\label{tab:complex-constraints}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
 class & Publication & - & - & $\neg$E $\sqcap$ F, E $\sqcap$ $\neg$F & $\sqcup$ & - \\
 class & $\neg$E $\sqcap$ F & - & - & $\neg$E, F & $\sqcap$ & - \\
@@ -827,7 +813,7 @@ As a consequence, the \emph{context-specific exclusive or of property groups} co
 	\label{tab:simplified-complex-constraints}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
 class & Publication & - & - & E, F & XOR \\
 class & E & - & - & A, B & $\sqcap$ \\
@@ -871,7 +857,7 @@ When mapped to the \emph{RDF-CV} (see Table \ref{tab:irreflexive-object-properti
 	\label{tab:irreflexive-object-properties-as-complex-constraints}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
 property & $\exists$ authorOf.Self & marriedTo & - & Self & $\exists$ & - \\
 class & $\neg$ $\exists$ authorOf.Self & - & - & $\exists$ authorOf.Self & $\neg$ & - \\
@@ -894,7 +880,7 @@ the \emph{complex constraint} can be expressed more concisely in form of a \emph
 	\label{tab:irreflexive-object-properties-as-simple-constraints}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
 property & $\top$ & authorOf & - & - & irreflexive & - \\
 		\end{tabular}
@@ -917,7 +903,7 @@ which can be represented by the \emph{RDF-CV} in form of a \emph{complex constra
 	\label{tab:primary-key-properties-as-complex-constraints}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
 property & $\top$ & isbn$^{-}$ & isbn$^{-}$ & - & inverse & - \\
 property & Book & isbn$^{-}$ & - & - & functional & - \\
@@ -942,7 +928,7 @@ When using the \emph{keyfor} \emph{DL} construct (\ms{isbn keyfor Book}), the \e
 	\label{tab:primary-key-properties-as-simple-constraints}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
 property & Book & isbn & - & - & keyfor & - \\
 		\end{tabular}
@@ -1132,7 +1118,7 @@ Then, one mapping (\emph{$m_1(sc_{OWL 2})$}, \emph{$m_2(sc_{ReSh})$}, \emph{$m_3
 	\label{tab:existential-quantification-as-simple-constraints}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
 property & Publication & publisher & - & Publisher & $\exists$ \\
 		\end{tabular}
